# integracao_natura

./: .gitignore  protocolos_ativos.ipynb  pyproject.toml  requirements.txt
src/integracao/: config.py  dispatch.py  redcap_client.py  sync_engine.py  visits_catalog.py  webhook.py
src/integracao.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/integracao/events/: generic_visit.py  status_atualization.py  v1_screening.py  v2_randomizacao.py
src/integracao/mappings/: procedures_maps.py  status_maps.py  v3_visit_name_maps.py
