[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "integracao"
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "pycap>=2.7.0",
    "pandas>=2.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

